objects/ListingPhoto__c/ListingPhoto__c.object-meta.xml
<CustomObject>
    <description>Listing__c（親）に対して、複数の写真を持つ ListingPhoto__c（子）</description>
    <label>住戸写真</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>No.</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>