objects/ListingPhoto__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>カテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>リビング</fullName>
            </value>
            <value>
                <fullName>キッチン</fullName>
            </value>
            <value>
                <fullName>バス・トイレ</fullName>
            </value>
            <value>
                <fullName>玄関</fullName>
            </value>
            <value>
                <fullName>寝室</fullName>
            </value>
            <value>
                <fullName>ベランダ</fullName>
            </value>
            <value>
                <fullName>収納</fullName>
            </value>
            <value>
                <fullName>設備</fullName>
            </value>
            <value>
                <fullName>図面</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>