objects/ListingPhoto__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <inlineHelpText>16文字で写真についての一言をどうぞ。</inlineHelpText>
    <label>コメント</label>
    <length>16</length>
    <type>Text</type>
</CustomField>