objects/ListingPhoto__c/fields/ImageContentsKey__c.field-meta.xml
<CustomField>
    <fullName>ImageContentsKey__c</fullName>
    <inlineHelpText>MCXXXXXXXXXXXXXXXX</inlineHelpText>
    <label>写真コンテンツキー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>