objects/ListingPhoto__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <label>募集住戸</label>
    <referenceTo>Listing__c</referenceTo>
    <relationshipLabel>住戸写真</relationshipLabel>
    <relationshipName>ListingPhotos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>