objects/ListingPhoto__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <inlineHelpText>スライダーで表示する順番 (1, 2, 3...)</inlineHelpText>
    <label>表示順</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>